<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            app:srcCompat="@drawable/dish" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/cafe_house"
            android:textColor="#030303"
            android:textSize="60sp" />


        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/border"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hintmail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/border"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#FFC107"
            android:text="@string/sign_in"
            android:textColor="#D81B60"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:id="@+id/view4"
                android:layout_width="50dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="#000000" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/other_way" />

            <View
                android:id="@+id/view3"
                android:layout_width="50dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/fbbackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/fb"
                app:drawableLeftCompat="@drawable/facebook" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/gbackground"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/g"
                android:textColor="#000000"
                app:drawableLeftCompat="@drawable/googlelogo"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

        </LinearLayout>

        <TextView
            android:id="@+id/w_t_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/want_to_register"
            android:textColor="#000000"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>