<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_up"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/avatar"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/upload_img"
                android:textColor="#000000"
                android:textStyle="bold" />

            <View
                android:id="@+id/view2"
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="#010101" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/border"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/border"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hintNo"
                android:inputType="phone"
                android:minHeight="48dp"
                android:padding="10dp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/border"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hintmail"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="10dp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/border"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#FFC107"
                android:text="@string/reg"
                android:textColor="#D81B60"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:id="@+id/view4"
                    android:layout_width="50dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:background="#000000" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/other_way" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="50dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:background="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/fbbackground"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/fb"
                    app:drawableLeftCompat="@drawable/facebook" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/gbackground"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/g"
                    android:textColor="#000000"
                    app:drawableLeftCompat="@drawable/googlelogo"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

            </LinearLayout>

            <TextView
                android:id="@+id/alreadyhaveaccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/already_present"
                android:textColor="#000000"
                android:textStyle="bold" />

        </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>