<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background3">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#18FFFFFF"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            app:srcCompat="@drawable/dish" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/cafe_house"
            android:textColor="#FFFDFD"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#BF8D44"
            android:padding="8dp"
            android:text="@string/login"
            android:textColor="#FFFCFC"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#BF8D44"
            android:padding="8dp"
            android:text="@string/register"
            android:textColor="#FFFCFC"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/skip"
            android:textColor="#FFFDFD"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>